[gd_scene load_steps=4 format=3 uid="uid://o84iuvgkmoo"]

[ext_resource type="Texture2D" uid="uid://bh0p3kdy3o6m3" path="res://assets/sprites/gameover.png" id="1_tsqty"]
[ext_resource type="Script" path="res://scripts/GameOver.gd" id="1_xw6x8"]

[sub_resource type="Theme" id="Theme_uoqoo"]
default_font_size = 24
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/constants/outline_size = 5

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_xw6x8")

[node name="Container" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource("Theme_uoqoo")

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Container/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_tsqty")

[node name="ScoreLabel" type="Label" parent="Container/VBoxContainer"]
layout_mode = 2
text = "Score: 0"

[node name="BestScoreLabel" type="Label" parent="Container/VBoxContainer"]
layout_mode = 2
text = "Best Score: 0"

[node name="RetryButton" type="Button" parent="Container/VBoxContainer"]
layout_mode = 2
text = "Retry"

[connection signal="pressed" from="Container/VBoxContainer/RetryButton" to="." method="_on_Button_pressed"]
